[FIX] crm_partner_location_zone: zone field in opportunity form view

--- a/crm_partner_location_zone/view/lead_view.xml
+++ b/crm_partner_location_zone/view/lead_view.xml
@@ -22,7 +22,7 @@
             <field name="model">crm.lead</field>
             <field name="inherit_id" ref="crm.crm_case_form_view_oppor" />
             <field name="arch" type="xml">
-                <field name="partner_id" position="after">
+                <field name="user_id" position="after">
                     <field name="zip_zone_id"/>
                 </field>
             </field>
